--- a/services/slock.service
+++ b/services/slock.service
@@ -1,10 +1,11 @@
 [Unit]
-Description=Lock the screen on resume from suspend
+Description=Lock the screen on resume from sleep
 
 [Service]
+Type=simple
 User=danilo
 Environment=DISPLAY=:0
 ExecStart=/usr/local/bin/slock
 
 [Install]
-WantedBy=suspend.target
+WantedBy=sleep.target
