--- a/.gitconfig
+++ b/.gitconfig
@@ -2,12 +2,13 @@
 	name = Danilo Bargen
 	email = mail@dbrgn.ch
 [color]
-    ui = true
+	ui = true
 [github]
 	user = dbrgn
 [alias]
 	lg = log --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr %an)%Creset' --abbrev-commit --date=relative
 	wdiff = diff --color-words
+	safemerge = merge --ff-only
 [pager]
 	color = true
 [push]
