--- a/alacritty.yml
+++ b/alacritty.yml
@@ -164,7 +164,7 @@ colors:
     black:   '0x000000'
     red:     '0xd54e53'
     green:   '0xb9ca4a'
-    yellow:  '0xe6c547'
+    yellow:  '0xf9ec2c'
     blue:    '0x7aa6da'
     magenta: '0xc397d8'
     cyan:    '0x70c0ba'
