alacritty: Configure search colors

--- a/alacritty.yml
+++ b/alacritty.yml
@@ -169,6 +169,19 @@ colors:
     text: '0x000000'
     cursor: '0xffffff'
 
+  # Search colors
+  #
+  # Colors used for the search bar and match highlighting.
+  search:
+    # Allowed values are CellForeground and CellBackground, which reference the
+    # affected cell, or hexadecimal colors like #ff00ff.
+    matches:
+      foreground: '#000000'
+      background: '#ffffff'
+    bar:
+      background: '#c5c8c6'
+      foreground: '#1d1f21'
+
   # Normal colors
   normal:
     black:   '0x000000'
