--- a/alacritty.yml
+++ b/alacritty.yml
@@ -111,21 +111,18 @@ draw_bold_text_with_bright_colors: true
 font:
   # The normal (roman) font face to use.
   normal:
-    family: DejaVu Sans Mono for Powerline # should be "Menlo" or something on macOS.
-    # Style can be specified to pick a specific face.
-    # style: Regular
+    family: monospace
+    style: Regular
 
   # The bold font face
   bold:
-    family: DejaVu Sans Mono for Powerline # should be "Menlo" or something on macOS.
-    # Style can be specified to pick a specific face.
-    # style: Bold
+    family: monospace
+    style: Bold
 
   # The italic font face
   italic:
-    family: DejaVu Sans Mono for Powerline # should be "Menlo" or something on macOS.
-    # Style can be specified to pick a specific face.
-    # style: Italic
+    family: monospace
+    style: Italic
 
   # Point size of the font
   size: 14.0
