--- a/alacritty.yml
+++ b/alacritty.yml
@@ -39,6 +39,12 @@ window:
   # - none: Neither borders nor title bar
   decorations: none
 
+  # Background opacity
+  #
+  # Window opacity as a floating point number from `0.0` to `1.0`.
+  # The value `0.0` is completely transparent and `1.0` is opaque.
+  opacity: 0.88
+
   # Startup Mode (changes require restart)
   #
   # Values for `startup_mode`:
@@ -66,9 +72,6 @@ window:
   # Set this to `None` to use the default theme variant.
   #gtk_theme_variant: None
   #
-
-  # Opacity
-  opacity: 0.92
 
 scrolling:
   # How many lines of scrollback to keep,
