--- a/alacritty.yml
+++ b/alacritty.yml
@@ -71,7 +71,6 @@ window:
   # Override the variant of the GTK theme. Commonly supported values are `dark` and `light`.
   # Set this to `None` to use the default theme variant.
   #gtk_theme_variant: None
-  #
 
 scrolling:
   # How many lines of scrollback to keep,
@@ -149,7 +148,7 @@ font:
   # OS X only: use thin stroke font rendering. Thin strokes are suitable
   # for retina displays, but for non-retina you probably want this set to
   # false.
-  use_thin_strokes: true
+  # use_thin_strokes: true
 
 # Colors (Tomorrow Night Bright)
 colors:
@@ -181,7 +180,7 @@ colors:
     matches:
       foreground: '#000000'
       background: '#ffffff'
-    bar:
+    footer_bar:
       background: '#c5c8c6'
       foreground: '#1d1f21'
 
