gpg: Disable two keyservers

--- a/gpg.conf
+++ b/gpg.conf
@@ -50,8 +50,8 @@ trusted-key 0xB993FF98A90C9AB1
 # Keyserver URL
 keyserver hkps://keys.openpgp.org
 keyserver hkps://keyserver.ubuntu.com:443
-keyserver hkps://hkps.pool.sks-keyservers.net
-keyserver hkps://pgp.ocf.berkeley.edu
+#keyserver hkps://hkps.pool.sks-keyservers.net
+#keyserver hkps://pgp.ocf.berkeley.edu
 # Proxy to use for keyservers
 #keyserver-options http-proxy=http://127.0.0.1:8118
 #keyserver-options http-proxy=socks5-hostname://127.0.0.1:9050
