--- a/config/sway/config
+++ b/config/sway/config
@@ -158,6 +158,9 @@ input "11311:40:SNSL0028:00_2C2F:0028_Touchpad" {
     bindsym $mod+8 workspace 8
     bindsym $mod+9 workspace 9
     bindsym $mod+0 workspace 10
+    bindsym $mod+u workspace u
+    bindsym $mod+i workspace i
+    bindsym $mod+o workspace o
     bindsym $mod+Tab workspace back_and_forth
     # Move focused container to workspace
     bindsym $mod+Shift+1 move container to workspace 1
@@ -170,6 +173,9 @@ input "11311:40:SNSL0028:00_2C2F:0028_Touchpad" {
     bindsym $mod+Shift+8 move container to workspace 8
     bindsym $mod+Shift+9 move container to workspace 9
     bindsym $mod+Shift+0 move container to workspace 10
+    bindsym $mod+Shift+u move container to workspace u
+    bindsym $mod+Shift+i move container to workspace i
+    bindsym $mod+Shift+o move container to workspace o
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
 #
