sway: Add workspace z

--- a/config/sway/config
+++ b/config/sway/config
@@ -6,7 +6,6 @@ exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CU
 exec hash dbus-update-activation-environment 2>/dev/null && \
      dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP
 
-
 ### Local Variables
 
 # Mod key
@@ -158,6 +157,7 @@ input "11311:40:SNSL0028:00_2C2F:0028_Touchpad" {
     bindsym $mod+8 workspace 8
     bindsym $mod+9 workspace 9
     bindsym $mod+0 workspace 10
+    bindsym $mod+z workspace z
     bindsym $mod+u workspace u
     bindsym $mod+i workspace i
     bindsym $mod+o workspace o
@@ -173,6 +173,7 @@ input "11311:40:SNSL0028:00_2C2F:0028_Touchpad" {
     bindsym $mod+Shift+8 move container to workspace 8
     bindsym $mod+Shift+9 move container to workspace 9
     bindsym $mod+Shift+0 move container to workspace 10
+    bindsym $mod+Shift+z move container to workspace z
     bindsym $mod+Shift+u move container to workspace u
     bindsym $mod+Shift+i move container to workspace i
     bindsym $mod+Shift+o move container to workspace o
