--- a/config/waybar/config
+++ b/config/waybar/config
@@ -139,5 +139,12 @@
         "format": " {}",
         "interval": 10,
         "exec": "IFS=, read -a fields <<<\"$(echo -e 'state' | nc -q 1 127.0.0.1 20999 | head -n 2 | tail -n 1)\" && if [[ \"${fields[1]}\" = \"\" ]]; then echo \"Down\"; else echo \"${fields[1]}\"; fi"
+    },
+    "custom/acpi_profile": {
+        "format": " {}",
+        "interval": 60,
+        "exec": "cat /sys/firmware/acpi/platform_profile",
+        "on-click": "sudo set-platform-profile cycle",
+        "signal": 10
     }
 }
