Parametrized sway config

--- a/config/sway/config
+++ b/config/sway/config
@@ -6,6 +6,11 @@ exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CU
 exec hash dbus-update-activation-environment 2>/dev/null && \
      dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP
 
+### Includes
+
+include "$(cat /etc/hostname).config"
+include "$(cat /etc/hostname).$(bash get-profile.sh).config"
+
 ### Local Variables
 
 # Mod key
