xdg-desktop-portal-wlr: Update mako commands

--- a/config/xdg-desktop-portal-wlr/config
+++ b/config/xdg-desktop-portal-wlr/config
@@ -1,6 +1,6 @@
 [screencast]
 output_name=HDMI-A-1
 max_fps=30
-exec_before=makoctl set-mode dnd
-exec_after=makoctl set-mode default
+exec_before=makoctl mode -s dnd
+exec_after=makoctl mode -r dnd
 chooser_type=none
