--- a/vscode.settings.json
+++ b/vscode.settings.json
@@ -12,5 +12,6 @@
     "rust-analyzer.inlayHints.closingBraceHints.minLines": 30,
     "rust-analyzer.inlayHints.lifetimeElisionHints.enable": "skip_trivial",
     "rust-analyzer.inlayHints.typeHints.enable": false,
-    "rust-analyzer.inlayHints.parameterHints.enable": false
+    "rust-analyzer.inlayHints.parameterHints.enable": false,
+    "files.insertFinalNewline": true
 }
